[gd_scene load_steps=4 format=3 uid="uid://cab0de6e0yqck"]

[ext_resource type="Script" path="res://scripts/draggable_frame.gd" id="1_4oeet"]
[ext_resource type="Texture2D" uid="uid://d02uywk8rubu" path="res://icon.svg" id="1_15nj4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2yplm"]
size = Vector2(128, 128)

[node name="draggable_frame" type="Node2D"]
top_level = true
position = Vector2(635, 327)
script = ExtResource("1_4oeet")

[node name="Icon" type="Sprite2D" parent="."]
texture = ExtResource("1_15nj4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_2yplm")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
